change loader and try fixing gaps again

--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -48,7 +48,7 @@ p
         position:absolute; 
         left: 5%; 
         right: 5%;
-        margin-top:20%; 
+        margin-top:25%; 
         font-size: 100%; 
         font-weight: 100; 
         z-index:2;
